# funcworks

./: .codecov.yml  .dockerignore  Dockerfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  versioneer.py
.circleci/: config.yml
.github/workflows/: release-drafter.yml
docker/: multiproc.coveragerc
example/: McMakin_EMUR01_mdl.json  plugin_settings
examples/models/ds000003/models/: model-001_smdl.json
examples/models/emuR01/: model-default_smdl.json
examples/models/emuR01/models/: model-default_smdl.json
examples/notebooks/: funcworks_presentation.ipynb
funcworks/: __about__.py  __init__.py  _version.py
funcworks/cli/: __init__.py  run.py
funcworks/example/: generate_funcworks_cmd.ipynb  sample_config.json
funcworks/interfaces/: __init__.py  bids.py  fsl.py  io.py  modelgen.py  visualization.py
funcworks/tests/: test_utils.py
funcworks/tests/data/: run0.mat  run0_corrected.mat
funcworks/utils/: __init__.py  bids.py  workflow.py
funcworks/workflows/: __init__.py  base.py  fsl.py
