[metadata]
description-file = README.md
author = FIU-Neuro developers
copyright = Copyright 2020--now, FIU-Neuro developers
license = Apache 2.0
maintainer = Adam Kimbler
email = akimbler@fiu.edu
status = Prototype
url = https://github.com/adamkimbler/funcworks
packagename = funcworks
description= funcworks: FUNCtional Processing WORKflows for Neuroimaging Data
long_description = file:README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console'
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache 2.0 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
install_requires =
    python-dateutil
    numpy
    scipy
    pandas
    pybids>=0.10.2
    traits==0.5.2
    nipype>=1.4.2

[options.extras_require]
duecredit = duecredit
test =
    codecov
    coverage
    coveralls
    flake8
    pytest
    pytest-cov
docs =
    sphinx>=1.5.3
    sphinx_rtd_theme
    sphinx-argparse
    numpydoc
    m2r
style =
   flake8
all =
    %(docs)s
    %(duecredit)s
    %(style)s
    %(test)s

[options.entry_points]
console_scripts =
      funcworks=funcworks.cli.run:main

[options.package_data]
funcworks =
    tests/data/*
    resources/*
[options.exclude_package_data]
* =
    examples

[versioneer]
VCS = git
style = pep440
versionfile_source = funcworks/_version.py
versionfile_build = funcworks/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
exclude=*build/,tests
putty-ignore =
    */__init__.py : +F401
ignore = E126,E402
